--- a/src/style.css
+++ b/src/style.css
@@ -132,7 +132,7 @@ a {
   margin-bottom: 50px;
 }
 footer {
-  background-color: #181818;
+  /* background-color: #181818; */
 }
 footer .footer {
   height: 60px;
