--- a/src/style.css
+++ b/src/style.css
@@ -12,20 +12,14 @@ body {
   -moz-font-feature-settings: "liga" on;
   font-feature-settings: "liga" on;
 }
-a {
-  text-decoration: none;
-}
+
 .logo {
   width: 80px;
 }
 
 .nav-head {
-  position: fixed !important;
-  width: 100%;
-  z-index: 20;
-  /* height: 70px; */
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  width: 100%;
 }
 .site-nav-right {
   justify-content: center;
@@ -131,12 +125,88 @@ a {
 .card-post-inner {
   margin-bottom: 50px;
 }
-footer {
-  /* background-color: #181818; */
-}
+/* footer {
+   background-color: #181818; 
+} */
 footer .footer {
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.login {
+  width: calc(100% - 24px);
+  max-width: 1036px;
+  padding: 0 12px;
+  margin: 0 auto;
+  flex: 1 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.login-title {
+  font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: #34323b;
+  letter-spacing: -1px;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 49px;
+}
+.login-inputs {
+  height: 500px;
+  width: 500px;
+  margin: 20px;
+}
+.login-input {
+  margin-bottom: 20px;
+}
+.login-input input {
+  font-size: 18px;
+  color: #34323b;
+  line-height: 30px;
+  position: relative;
+  display: table-cell;
+  margin: 0;
+  outline: none;
+  width: 100%;
+  height: 70px;
+  padding: 8px 18px;
+  border: 1px solid #e6e6ed;
+  box-sizing: border-box;
+  z-index: 2;
+}
+.login-input-label {
+  margin-bottom: 5px;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: #34323b;
+  font-size: 20px;
+}
+.asterisk {
+  color: #f63954;
+  margin-left: 4px;
+}
+.login-button {
+  width: 100%;
+  background-color: #f63954;
+  border-color: #f63954;
+  color: #fff;
+  font-size: 16px;
+  padding: 14px 24px;
+  border: 2px solid transparent;
+  text-align: center;
+  outline: none;
+  margin: 2px auto;
+  padding: 10px 19px;
+  cursor: pointer;
+  white-space: nowrap;
+  transition: all 0.3s ease-out;
+}
+.login-button:hover {
+  background-color: #e80b2a;
+  border-color: #e80b2a;
+}
+
+.forget-password a:hover {
+  color: #f63954 !important;
 }
