--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,15 @@ body {
   font-feature-settings: "liga" on;
 }
 
+.disable-bootstrap-link a:hover {
+  text-decoration: none !important;
+  color: inherit !important;
+}
+
+.disable-bootstrap-link a {
+  color: inherit !important;
+}
+
 .logo {
   width: 80px;
 }
@@ -186,7 +195,7 @@ footer .footer {
   color: #f63954;
   margin-left: 4px;
 }
-.login-button {
+.global-button {
   width: 100%;
   background-color: #f63954;
   border-color: #f63954;
@@ -202,11 +211,24 @@ footer .footer {
   white-space: nowrap;
   transition: all 0.3s ease-out;
 }
-.login-button:hover {
+.global-button:hover {
   background-color: #e80b2a;
   border-color: #e80b2a;
 }
 
 .forget-password a:hover {
   color: #f63954 !important;
+}
+.post-full-title {
+  color: #27262c;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 3rem;
+}
+.post-full-image {
+  margin: 0;
+  height: 490px;
+  background: #c5d2d9 50%;
+  background-size: cover;
+  border-radius: 5px;
 }
